--- a/TodoList/TodoList/Client/wwwroot/index.html
+++ b/TodoList/TodoList/Client/wwwroot/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>TodoList</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap/bootstrap.min.css?v=1" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="TodoList.Client.styles.css" rel="stylesheet" />
 </head>
