--- a/Chat/Chat/Client/wwwroot/index.html
+++ b/Chat/Chat/Client/wwwroot/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Chat</title>
-    <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="css/mycss.css" rel="stylesheet" />
-    <link href="Chat.Client.styles.css" rel="stylesheet" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<title>Chat</title>
+	<base href="/" />
+	<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+	<link href="css/app.css" rel="stylesheet" />
+	<link href="css/mycss.css?v=3" rel="stylesheet" />
+	<link href="Chat.Client.styles.css" rel="stylesheet" />
 </head>
 
 <body>
